--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "keywords": [
     ""
   ],
-  "scripts": {},
+  "scripts": {
+    "test": "jasmine"
+  },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine": "^4.5.0"
+  },
   "engines": {
     "node": ">=12.0.0"
   }
